@@ -73,7 +73,36 @@ return null;
 
     public Wishlist getWishlistFromID(int id) {
         String sql = "Select * from wishlist where WISHLIST_ID = ?";
-        return jdbcTemplate.query(sql,new WishlistRowMapper(),id).get(0);
+
+       List<Wishlist> wishlists = jdbcTemplate.query(sql,new WishlistRowMapper(),id);
+       if (!wishlists.isEmpty()){
+           return wishlists.getFirst();
+       }
+       return null;
+    }
+
+    public Wish createNewWish(Wish wish){
+        String sql = "Insert into WISH (WISH_WISHLIST_ID,WISH_NAME,WISH_DESC,WISH_IMGURL,WISH_PRICE,WISH_URL) values (?,?,?,?,?,?)";
+        int rowsAffected = jdbcTemplate.update(sql,wish.getWishlistID(),wish.getName(),wish.getDescription(),wish.getImgURL(),wish.getPrice(),wish.getWishURL());
+        if (rowsAffected>0){
+            return wish;
+        }
+        return null;
+    }
+
+
+    public boolean checkIfUserOwnList(int listId, User user){
+        String sql = "Select * from wishlist where WISHLIST_USER_ID = ?";
+        if (user != null){
+            List<Wishlist> wishlistList = jdbcTemplate.query(sql,new WishlistRowMapper(),user.getId());
+            for (Wishlist wishlist : wishlistList){
+                if (wishlist.getId() == listId){
+                    return true;
+                }
+            }
+        }
+
+        return false;
     }
 
 }
